Upgraded to use Flatly, and made some minor adjustments elsewhere

--- a/index.html
+++ b/index.html
@@ -4,10 +4,43 @@ layout: default
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <h1>New Thing</h1>
-    <h2>Hello world!</h2>
-    <h3>And goodbye &ldquo;environment setup&rdquo;</h3>
+    <h1>Hello World!</h1>
+    <h2>And goodbye &ldquo;environment setup&rdquo;</h2>
     <p>Tired of logging hours and hours of time to "environment setup"?  Well, I was too.  Getting started on a new project required downloading Boostrap, jQuery, <kbd>touch index.html</kbd>, etc.  Nasty. <em>But, no more!</em></p>
     <p>With this nifty prototype application, you can hit the ground running on your next project.  Just clone this repo, run <kbd>install.sh</kbd> (just gathers dependencies and does the initial build), and you're good to go!</p>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <h1>What's In The Box</h1>
+    <hr>
+
+    <h2>jQuery</h2>
+    <p>Because Bootstrap needs it, and let's face it: you'll probably want it.</p>
+
+    <h2>Bootstrap</h2>
+    <p>The most widely-used grid framework in the known universe.</p>
+
+    <h2>Gulp</h2>
+    <p>Because you should only need to run one command to get your dev environment running, and it's a lot less hairy than Grunt.</p>
+
+    <h2>LiveReload</h2>
+    <p>Do you like constantly hitting <kbd>F5</kbd>? Me neither.</p>
+
+    <h2>LESS</h2>
+    <p>Because LESS is powered by Javascript, and plays nicely with Bootstrap.</p>
+
+    <h2>Bower</h2>
+    <p>Because managing front-end dependencies by hand is for cavemen.</p>
+
+    <h2>.gitignore</h2>
+    <p>You'll probably want to use Git, and you probably won't want your dependencies tracked.</p>
+
+    <h2>Jekyll architecture</h2>
+    <p>Templating for maximum DRYness, and deploys to GH Pages with ease.</p>
+
+    <h2>Flat UI</h2>
+    <p>Prototype comes bundled with the <a href="http://bootswatch.com/flatly/">Flatly theme</a>, giving your site a consistent and beautiful look and feel.</p>
   </div>
 </div>
