Removed bad example and added Bootstrap version

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: default
     <p>Because Bootstrap needs it, and let's face it: you'll probably want it.</p>
 
     <h2>Bootstrap</h2>
-    <p>The most widely-used grid framework in the known universe.</p>
+    <p>The most widely-used grid framework in the known universe (v3.1.1).</p>
 
     <h2>Gulp</h2>
     <p>Because you should only need to run one command to get your dev environment running, and it's a lot less hairy than Grunt.</p>
@@ -288,21 +288,6 @@ layout: default
                   <button type="button" class="btn btn-default">5</button>
                   <button type="button" class="btn btn-default">6</button>
                   <button type="button" class="btn btn-default">7</button>
-                </div>
-
-                <div class="btn-group">
-                  <button type="button" class="btn btn-default">8</button>
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                      Dropdown
-                      <span class="caret"></span>
-                    </button>
-                    <ul class="dropdown-menu">
-                      <li><a href="#">Dropdown link</a></li>
-                      <li><a href="#">Dropdown link</a></li>
-                      <li><a href="#">Dropdown link</a></li>
-                     </ul>
-                  </div>
                 </div>
               </div>
             </div>
