--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@ layout: default
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <h1>Hello World!</h1>
-    <h2>And goodbye &ldquo;environment setup&rdquo;</h2>
+    <div class="page-header">
+      <h1>Hello World!</h1>
+      <h2>And goodbye &ldquo;environment setup&rdquo;</h2>
+    </div>
+
     <p>Tired of logging hours and hours of time to "environment setup"?  Well, I was too.  Getting started on a new project required downloading Boostrap, jQuery, <kbd>touch index.html</kbd>, etc.  Nasty. <em>But, no more!</em></p>
     <p>With this nifty prototype application, you can hit the ground running on your next project.  Just clone this repo, run <kbd>install.sh</kbd> (just gathers dependencies and does the initial build), and you're good to go!</p>
   </div>
@@ -13,8 +16,9 @@ layout: default
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <h1>What's In The Box</h1>
-    <hr>
+    <div class="page-header">
+      <h1>What's In The Box</h1>
+    </div>
 
     <h2>jQuery</h2>
     <p>Because Bootstrap needs it, and let's face it: you'll probably want it.</p>
